--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to the Symphony Quiz Portal</h1>
-  <div class="quiz-link"><a href="./architecture-engineering-standards/">Architecture & Engineering Standards</a></div>
-  <div class="quiz-link"><a href="./data-quality/">Data Quality</a></div>
-  <div class="quiz-link"><a href="./data-ownership/">Data Ownership</a></div>
-  <div class="quiz-link"><a href="./quiz-editor/">Quiz Editor Tool</a></div>
+  <h1>Welcome to the Data Delivery Framework Quiz Portal</h1>
+  <div class="quiz-link"><a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Architecture_Engineering_Standards.html">Architecture & Engineering Standards</a></div>
+  <div class="quiz-link"><a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Assuring_Data_Quality.html">Data Quality</a></div>
+  <div class="quiz-link"><a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Data_Ownership.html">Data Ownership</a></div>
+  <div class="quiz-link"><a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Managing_Metadata.html">Managing Metadata</a></div>
+  <div class="quiz-link"><a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Operational_Excellence.html">Operational Excellence</a></div>
 </body>
 </html>
