--- a/index.html
+++ b/index.html
@@ -2,20 +2,112 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Quiz Portal</title>
+  <title>Symphony Quiz Portal</title>
   <style>
-    body { font-family: sans-serif; padding: 2rem; background: #f5f5f5; }
-    h1 { color: #333; }
-    .quiz-link { margin: 1rem 0; }
-    a { text-decoration: none; color: #007bff; font-size: 1.2rem; }
+    body {
+      font-family: "Segoe UI", sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #F9EAF8;
+      color: #333;
+    }
+
+    header {
+      background: linear-gradient(90deg, #890D7E, #542671);
+      color: white;
+      padding: 2.5rem 1rem;
+      text-align: center;
+      position: relative;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1rem;
+    }
+
+    .container {
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    .quiz-link {
+      margin: 1rem 0;
+    }
+
+    .quiz-link a {
+      display: inline-block;
+      background-color: white;
+      color: #890D7E;
+      border: 2px solid #890D7E;
+      padding: 0.75rem 1.5rem;
+      border-radius: 12px;
+      font-size: 1.1rem;
+      font-weight: 600;
+      text-decoration: none;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    .quiz-link a:hover {
+      background-color: #890D7E;
+      color: white;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.85rem;
+      color: #666;
+      margin-top: 3rem;
+      padding: 1rem;
+    }
+
+    /* Optional wave background */
+    .wave {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 40px;
+      background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1440 80" xmlns="http://www.w3.org/2000/svg"><path fill="%23FFF0FE" d="M0,32L80,42.7C160,53,320,75,480,80C640,85,800,75,960,64C1120,53,1280,43,1360,37.3L1440,32L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>') no-repeat bottom;
+      background-size: cover;
+    }
   </style>
 </head>
 <body>
-  <h1>Welcome to the Data Delivery Framework Quiz Portal</h1>
-  <div class="quiz-link"><a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Architecture_Engineering_Standards.html">Architecture & Engineering Standards</a></div>
-  <div class="quiz-link"><a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Assuring_Data_Quality.html">Data Quality</a></div>
-  <div class="quiz-link"><a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Data_Ownership.html">Data Ownership</a></div>
-  <div class="quiz-link"><a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Managing_Metadata.html">Managing Metadata</a></div>
-  <div class="quiz-link"><a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Operational_Excellence.html">Operational Excellence</a></div>
+
+  <header>
+    <h1>The Data Delivery Framework Quiz Portal</h1>
+    <p>Quizzes to be completed as part of the Data Delivery Framework Training</p>
+    <div class="wave"></div>
+  </header>
+
+  <div class="container">
+    <div class="quiz-link">
+      <a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Architecture_Engineering_Standards.html">Architecture & Engineering Standards</a>
+    </div>
+    <div class="quiz-link">
+      <a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Assuring_Data_Quality.html">Assuring Data Quality</a>
+    </div>
+    <div class="quiz-link">
+      <a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Data_Ownership.html">Data Ownership</a>
+    </div>
+    <div class="quiz-link">
+      <a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Managing_Metadata.html">Managing Metadata</a>
+    </div>
+    <div class="quiz-link">
+      <a href="https://diageoquizresults.github.io/Quizzes/QuizApp_Operational_Excellence.html">Operational Excellence</a>
+    </div>
+  </div>
+
+  <footer>
+    © 2025 Symphony Programme | Diageo Internal Use Only
+  </footer>
+
 </body>
 </html>
+
